# shoppit

./: Customer-Support-System.md  Readme.md
backend/: .gitignore  db.sqlite3  pyproject.toml
backend/ecommerce/: asgi.py  middleware.py  settings.py  urls.py
backend/support/: admin.py  consumers.py  models.py  notifications.py  routing.py  serializers.py  signals.py  urls.py  views.py
frontend/src/: App.tsx
frontend/src/components/: AdminLayout.tsx  CustomerSupportChat.tsx  Footer.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: SupportDashboard.tsx
